[bumpversion]
current_version = 0.2.0

[metadata]
name = messagingclient
version = 0.1.0
author = Akhilesh Halageri
description = Messaging client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seung-lab/messaging-client
project_urls = 
	Bug Tracker = https://github.com/seung-lab/messaging-client/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= messagingclient
packages = find:
python_requires = >=3.6

[options.packages.find]
where = messagingclient
